--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
     <header>
       <div class="header-top">
-        <h1 class="title1">Awesome Books</h1>
+        <h1 class="title1">Book Store</h1>
       </div>
     </header>
-    <section>
-      <h2>Selected Books</h2>
+    <section class="books">
+      <h2>Added Books</h2>
       <div class="books-wrapper" id="books-wrapper"></div>
     </section>
     <section class="input-wrapper">
@@ -25,14 +25,14 @@
           placeholder="Title"
           id="title"
           name="title"
-          maxlength="30"
+          maxlength="23"
         />
         <input
           type="text"
           placeholder="Author"
           id="author"
           name="author"
-          maxlength="30"
+          maxlength="23"
         />
         <button type="submit" id="add-btn">Add</button>
       </form>
